--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
 	width: 100%;
 	height: 500px;
 	overflow: hidden;
-	background: url(../../images/home-screen-img.jpg) repeat center center;
+	background: url(../images/home-screen-img.jpg) repeat center center;
 }
 .home-page-img h2 {
 	font-family: 'Lobster', cursive;
